--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,5 +18,11 @@ no_index:
     - t
     - inc
 requires:
+  Data::Dumper: 0
+  Test::Deep::NoTest: 0
   Test::More: 0
-version: 0.010
+resources:
+  bugtracker: http://github.com/pdl/Test-Proto/issues
+  homepage: http://github.com/pdl/Test-Proto
+  repository: http://github.com/pdl/Test-Proto
+version: 0.011
