Stripped out everything that isn't new and shiny

--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -25,4 +25,4 @@ resources:
   bugtracker: http://github.com/pdl/Test-Proto/issues
   homepage: http://github.com/pdl/Test-Proto
   repository: http://github.com/pdl/Test-Proto
-version: 0.011
+version: ''
